[package]
name = "convocacao-painel"
version = "1.0.0"
description = "Painel de convocacao"
authors = ["rony"]
edition = "2021"

[lib]
name = "convocacao_painel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde_json = "1"
# Limita o time a versoes compativeis com cookie 0.18 (0.3.49+ quebra a compilacao).
time = ">=0.3.20, <0.3.49"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
